fixed the testimonial quote in html by giving figcaption tag. Style the section with flex, gave a width to the text container and some margin. aligned the text to the center. aligned figcaption to the end and gived a bold font

--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ body {
 
 .hero{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin: 16px;
+    margin: 50px 30px;
 }
 
 .hright img {
@@ -73,10 +73,30 @@ a {
     margin-left: -3vw;
 }
 /* Information */
+.information {
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
+    display: flex;
+    justify-content: space-around;
+    align-items: baseline;
+    flex-wrap: wrap;
+}
+
+.item {
+    width: 220px;
+    margin: 50px 0px;
+    text-align: center;
+}
+
 .title {
     font-size: 36px;
     font-weight: 800;
     color: #1f2937;
+    text-align: center;
+    margin: 50px 0px;
 }
 
 .subtext {
@@ -90,10 +110,24 @@ a {
 /* testimonial */
 .testimonial {
     background-color: #e5e7eb;
-    font-size: 36px;
+    font-size: 18px;
     font-style: italic;
-    font-weight: 300;
+    font-weight: 200;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.testimonial .text {
+    margin: 50px 0px;
+    width: 500px;
+}
+
+.text figcaption {
+    font-weight: 800;
+    text-align: end;
+}
+/* Trovare un modo per spostare il nome a destra */
 /* singup */
 .banner {
     background-color: #3882f6;
